Fixed header + fixed cards scrolling on mobile

--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ body {
     display: none;
 }
 .header {
-    padding-top: 23px;
+    padding-top: 16px;
     padding-bottom: 16px;
     border-bottom: inherit;
     box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.18);
@@ -583,15 +583,22 @@ iframe {
 
 
 
-
+.other-cases-cards-slider-holder {
+    overflow: hidden;
+}
 
 .other-cases-cards-slider {
     display: flex;
     gap: 20px;
-    overflow: hidden;
+    /* overflow: hidden; */
+    overflow-x: scroll;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     scroll-snap-type: both;
+}
+
+.other-cases-cards-slider::-webkit-scrollbar {
+    display: none;
 }
 
 .other-cases-card {
